# Applied-Programming-2026

./: 1_python_basics_I.ipynb  pyproject.toml
